<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.edu.pwr.lab2borowiak.colorsgame.MainActivity"
    android:background="#E3F2FD">


    <Button
        android:id="@+id/buttonS"

        android:text="@string/start"
        android:textColor="#FFFFFF"
        android:textSize="30sp"

        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#AFBBBD"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginRight="50dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        android:layout_marginTop="8dp" />


    <Button
        android:id="@+id/buttonHowToPlay"

        android:text="@string/how_to_play"
        android:textColor="#FFFFFF"
        android:textSize="30sp"

        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#AFBBBD"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginRight="50dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonS"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRateApp" />


    <Button
        android:id="@+id/buttonRateApp"

        android:text="@string/rate"
        android:textColor="#FFFFFF"
        android:textSize="30sp"

        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#AFBBBD"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginRight="50dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2" />

    <ImageButton
        android:id="@+id/buttonMusic"
        android:background="#E3F2FD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/music_note_black"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-4411562214841710/9889354782"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

</android.support.constraint.ConstraintLayout>
