<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.edu.pwr.lab2borowiak.colorsgame.GameActivity"
    android:background="#E3F2FD">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3894325" />

    <TextView
        android:id="@+id/textViewColor"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="COLOR"/>

    <Button
        android:id="@+id/buttonRed"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/red_900"
        app:layout_constraintRight_toLeftOf="@+id/buttonGreen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBlue" />

    <Button
        android:id="@+id/buttonGreen"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/light_green_A700"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/buttonRed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonYellow" />

    <Button
        android:id="@+id/buttonBlue"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/blue_900"
        app:layout_constraintRight_toLeftOf="@+id/buttonYellow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonRed"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/buttonYellow"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/yellow_600"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/buttonBlue"
        app:layout_constraintBottom_toTopOf="@+id/buttonGreen"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.501"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewColor" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        app:layout_constraintRight_toLeftOf="@+id/pointsTextView"
        android:layout_marginRight="2dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/pointsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/recordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintRight_toLeftOf="@+id/recordPointsView"
        android:layout_marginRight="1dp" />

    <TextView
        android:id="@+id/recordPointsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/pointsTextView" />


</android.support.constraint.ConstraintLayout>
